--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <packaging>pom</packaging>
+    <groupId>springframework</groupId>
+    <artifactId>pet-clinic</artifactId>
+    <version>test vertion 1</version>
+
     <modules>
         <module>pet-clinic-data</module>
         <module>pet-clinic-web</module>
@@ -11,11 +15,9 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.4.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath /> <!-- lookup parent from repository -->
     </parent>
-    <groupId>springframework</groupId>
-    <artifactId>pet-clinic</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+
     <name>pet-clinic</name>
     <description>SFG Pet Clinic Project</description>
 
@@ -26,7 +28,28 @@
     <dependencies>
 
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <goals>install</goals>
+                    <checkModificationExcludes>
+                        <checkModificationExclude>pom.xml</checkModificationExclude>
+                    </checkModificationExcludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-
+    <scm>
+        <developerConnection>scm:git:git@github.com:zyj1616/pet-clinic.git</developerConnection>
+      <tag>try maven release</tag>
+  </scm>
 
 </project>
