"module maven builds"

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <packaging>pom</packaging>
     <groupId>springframework</groupId>
     <artifactId>pet-clinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.1.1</version>
 
     <modules>
         <module>pet-clinic-data</module>
@@ -42,6 +42,7 @@
                     <checkModificationExcludes>
                         <checkModificationExclude>pom.xml</checkModificationExclude>
                     </checkModificationExcludes>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
             </plugin>
         </plugins>
