--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <packaging>pom</packaging>
     <groupId>springframework</groupId>
     <artifactId>pet-clinic</artifactId>
-    <version>0.1.1</version>
+    <version>0.0.3-SNAPSHOT</version>
 
     <modules>
         <module>pet-clinic-data</module>
