"module maven builds"

--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:git@github.com:zyj1616/pet-clinic.git</developerConnection>
+        <developerConnection>scm:git:https://github.com/zyj1616/pet-clinic.gitt</developerConnection>
       <tag>test</tag>
   </scm>
 
