--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <packaging>pom</packaging>
     <groupId>springframework</groupId>
     <artifactId>pet-clinic</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.3-SNAPSHOT</version>
 
     <modules>
         <module>pet-clinic-data</module>
@@ -49,7 +49,7 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:https://github.com/zyj1616/pet-clinic.gitt</developerConnection>
+        <developerConnection>scm:git:git@github.com:zyj1616/pet-clinic.git</developerConnection>
       <tag>head</tag>
   </scm>
 
