--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <packaging>pom</packaging>
     <groupId>springframework</groupId>
     <artifactId>pet-clinic</artifactId>
-    <version>0.0.5-SNAPSHOT</version>
+    <version>0.0.5</version>
 
     <modules>
         <module>pet-clinic-data</module>
@@ -50,7 +50,7 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:zyj1616/pet-clinic.git</developerConnection>
-      <tag>head</tag>
+      <tag>pet-clinic-0.0.5</tag>
   </scm>
 
 </project>
